--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=book-service
+
+#H2
+#For memory
+#spring.datasource.url=jdbc:h2:mem:java52
+
+#For file
+spring.datasource.url=jdbc:h2:file:C:/Java53/h2_Java52
+
+
+#PostgresSQL by aiven.io
+
+#spring.datasource.url=jdbc:postgresql://pg-364cfc9-peo198100-8039.i.aivencloud.com:25109/defaultdb
+#spring.datasource.username=avnadmin
+#spring.datasource.password=AVNS_qr_rDHGS07HeD5NtHtj
+
+#Hibernet 
+
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql =true
